refactor stanislaus json file

--- a/preprocessing/USGS Gauge Flow Data extraction/Retrieve USGS gauge data - python.ipynb
+++ b/preprocessing/USGS Gauge Flow Data extraction/Retrieve USGS gauge data - python.ipynb
@@ -2,40 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "retrieving USGS 11264500 MERCED R A HAPPY ISLES BRIDGE NR YOSEMITE CA (16%)\n",
-      "retrieving USGS 11266500 MERCED R A POHONO BRIDGE NR YOSEMITE CA (33%)\n",
-      "retrieving USGS 11270900 MERCED R BL MERCED FALLS DAM NR SNELL CA (50%)\n",
-      "retrieving USGS 11271290 MERCED R A SHAFFER BRIDGE NR CRESSEY CA (66%)\n",
-      "retrieving USGS 11272500 MERCED R NR STEVINSON CA (83%)\n",
-      "retrieving USGS 11269700 EXCHEQUER PH A EXCHEQUER CA (100%)\n",
-      "done!\n"
+      "retrieving USGS 11291000 RELIEF RES NR BAKER STATION CA (10%)\n",
+      "retrieving USGS 11292600 DONNELL LK NR DARDANELLE CA (20%)\n",
+      "retrieving USGS 11292800 BEARDSLEY LAKE NEAR STRAWBERRY CA (30%)\n",
+      "retrieving USGS 11293350 UNION RES NR BIG MEADOWS CA (40%)\n",
+      "retrieving USGS 11293370 UTICA RES NR BIG MEADOWS CA (50%)\n",
+      "retrieving USGS 11293770 NEW SPICER MEADOW RES NR BIG MEADOW CA (60%)\n",
+      "retrieving USGS 11297700 LYONS RES NR LONG BARN CA (70%)\n",
+      "retrieving USGS 11299000 NEW MELONES RES NR SONORA CA (80%)\n",
+      "retrieving USGS 11295900 PINECREST LK NR STRAWBERRY CA (90%)\n",
+      "retrieving USGS 11299995 TULLOCH RES NR KNIGHTS FERRY CA (100%)\n"
      ]
     }
    ],
    "source": [
-    "%matplotlib inline\n",
     "import os\n",
     "import hydrofunctions as hf\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "DEBUG = False\n",
     "\n",
-    "basin = 'merced'\n",
+    "# basin = 'merced'\n",
     "# basin = 'upper san joaquin'\n",
     "# basin = 'tuolumne'\n",
+    "basin = 'stanislaus'\n",
     "\n",
-    "variable = 'streamflow'\n",
-    "pc = '00060'\n",
-    "\n",
-    "# variable = 'storage'\n",
-    "# pc = '00054'\n",
+    "# variable, pc = 'streamflow', '00060'\n",
+    "variable, pc = 'storage', '00054'\n",
     "\n",
     "if not os.path.exists(basin):\n",
     "    os.mkdir(basin)\n",
