Tulloch Lake -> Lake Tulloch

--- a/preprocessing/fill missing gauge data.ipynb
+++ b/preprocessing/fill missing gauge data.ipynb
@@ -42,7 +42,7 @@
        "      <th>Relief Reservoir</th>\n",
        "      <th>New Spicer Meadow Reservoir</th>\n",
        "      <th>New Melones Lake</th>\n",
-       "      <th>Tulloch Lake</th>\n",
+       "      <th>Lake Tulloch</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -133,7 +133,7 @@
        "1980-01-04           17.392068               0.0                          0.0   \n",
        "1980-01-05           17.392068               0.0                          0.0   \n",
        "\n",
-       "            New Melones Lake  Tulloch Lake  \n",
+       "            New Melones Lake  Lake Tulloch  \n",
        "Date                                        \n",
        "1980-01-01        226.713624     73.022016  \n",
        "1980-01-02        226.713624     72.528624  \n",
