update tuolumne drought logic

--- a/preprocessing/other/USGS Gauge Flow Data extraction/Retrieve USGS gauge data - python.ipynb
+++ b/preprocessing/other/USGS Gauge Flow Data extraction/Retrieve USGS gauge data - python.ipynb
@@ -2,23 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "retrieving USGS 11291000 RELIEF RES NR BAKER STATION CA (10%)\n",
-      "retrieving USGS 11292600 DONNELL LK NR DARDANELLE CA (20%)\n",
-      "retrieving USGS 11292800 BEARDSLEY LAKE NEAR STRAWBERRY CA (30%)\n",
-      "retrieving USGS 11293350 UNION RES NR BIG MEADOWS CA (40%)\n",
-      "retrieving USGS 11293370 UTICA RES NR BIG MEADOWS CA (50%)\n",
-      "retrieving USGS 11293770 NEW SPICER MEADOW RES NR BIG MEADOW CA (60%)\n",
-      "retrieving USGS 11297700 LYONS RES NR LONG BARN CA (70%)\n",
-      "retrieving USGS 11299000 NEW MELONES RES NR SONORA CA (80%)\n",
-      "retrieving USGS 11295900 PINECREST LK NR STRAWBERRY CA (90%)\n",
-      "retrieving USGS 11299995 TULLOCH RES NR KNIGHTS FERRY CA (100%)\n"
+      "retrieving USGS 11275500 HETCH HETCHY RES A HETCH HETCHY CA (25%)\n",
+      "retrieving USGS 11277500 LK ELEANOR NR HETCH HETCHY CA (50%)\n",
+      "retrieving USGS 11277200 CHERRY LK NR HETCH HETCHY CA (75%)\n",
+      "retrieving USGS 11287500 DON PEDRO RES NR LA GRANGE CA (100%)\n",
+      "done!\n"
      ]
     }
    ],
@@ -31,8 +26,8 @@
     "\n",
     "# basin = 'merced'\n",
     "# basin = 'upper san joaquin'\n",
-    "# basin = 'tuolumne'\n",
-    "basin = 'stanislaus'\n",
+    "basin = 'tuolumne'\n",
+    "# basin = 'stanislaus'\n",
     "\n",
     "# variable, pc = 'streamflow', '00060'\n",
     "variable, pc = 'storage', '00054'\n",
@@ -67,11 +62,12 @@
     "else:\n",
     "    if variable == 'storage':\n",
     "        df = df * 1233.5 / 1e6\n",
-    "        path = '../../data/{} River/gauges/storage_mcm.csv'.format(basin.title())\n",
-    "        df.to_csv(path)\n",
+    "        path = '{} River/gauges/storage_mcm.csv'.format(basin.title())\n",
     "    else:\n",
-    "        path = '../../data/{} River/gauges/streamflow_cfs.csv'.format(basin.title())\n",
-    "        df.to_csv(path)\n",
+    "        path = '{} River/gauges/streamflow_cfs.csv'.format(basin.title())\n",
+    "    root_path = os.environ['SIERRA_DATA_PATH']\n",
+    "    outpath = os.path.join(root_path, path)\n",
+    "    df.to_csv(outpath)\n",
     "print('done!')"
    ]
   },
