pywr_models -> sierra

--- a/analyses/whiplash figures.ipynb
+++ b/analyses/whiplash figures.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\david\\\\Box\\\\CERC-WET\\\\Task7_San_Joaquin_Model\\\\pywr_models\\\\results'"
+       "'C:\\\\Users\\\\david\\\\Box\\\\CERC-WET\\\\Task7_San_Joaquin_Model\\\\sierra\\\\results'"
       ]
      },
      "execution_count": 2,
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../pywr_models/utilities/basin_lookup.json') as f:\n",
+    "with open('../sierra/utilities/basin_lookup.json') as f:\n",
     "    basin_lookup = json.load(f)\n",
     "class Basin(object):\n",
     "    def __init__(self, basin_abbr):\n",
